# siglo2-vala

./: README.md  meson.build  org.example.App.json
data/: org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: application.vala  main.vala  meson.build  window.ui  window.vala
